port cat-printer keyboard-driven control (use tab to activate)

--- a/static/lang/en-US.json
+++ b/static/lang/en-US.json
@@ -55,5 +55,12 @@
     "click-to-load-fonts": "Click to load fonts",
     "serif": "Serif",
     "sans-serif": "Sans-Serif",
-    "monospace": "Monospace"
+    "monospace": "Monospace",
+    "ENTER": "Enter",
+    "SPACE": "Space",
+    "ESCAPE": "Esc",
+    "TAB": "Tab",
+    "COMMA": "Comma",
+    "DOT": "Dot",
+    "": ""
 }
